tests/test_data/CodeStructureSnippets/bad/sem_err_5.7.ifj21
require "ifj21"

function foo(x : integer, y : string) : integer, integer
  local i : integer = 1
  local j : integer = 2

  return i, j        
end

--main
function main()
    foo(1,2)
end
main()